cursor trail. this is awesome

--- a/kitty.conf
+++ b/kitty.conf
@@ -251,6 +251,8 @@ font_size 14.0
 
 #: Cursor customization {{{
 
+cursor_trail 20
+
 # cursor #cccccc
 
 #: Default cursor color. If set to the special value none the cursor
