cursor trail tweaks... pretty sure the lag I see is due to the pc hardware... not the config

--- a/kitty.conf
+++ b/kitty.conf
@@ -252,6 +252,8 @@ font_size 14.0
 #: Cursor customization {{{
 
 cursor_trail 20
+cursor_trail_decay 0.1 0.4
+cursor_trail_start_threshold 2
 
 # cursor #cccccc
 
